minimized and corrected API
