# storage/api-docs/api-docs.json
@@ -12,10 +12,10 @@
         }
     ],
     "paths": {
-        "/api/dashboard/login": {
+        "/api/dashboard/auth/login": {
             "post": {
                 "summary": "Dashboard admin login",
-                "operationId": "5b60db8d5199c2d3a7c450605d38d0bc",
+                "operationId": "f89d66c0a02b255355ac910033649abd",
                 "responses": {
                     "200": {
                         "description": "Admin logged in successfully"
@@ -23,10 +23,10 @@
                 }
             }
         },
-        "/api/dashboard/user": {
+        "/api/dashboard/auth/user": {
             "get": {
                 "summary": "Get logged in admin user details",
-                "operationId": "25e16dcc285b6c2d9485fb044691ffd1",
+                "operationId": "c80377fb8b7759dbb6b4da4ebf4736ec",
                 "responses": {
                     "200": {
                         "description": "Admin user details retrieved successfully"
@@ -34,10 +34,10 @@
                 }
             }
         },
-        "/api/dashboard/logout": {
+        "/api/dashboard/auth/logout": {
             "post": {
                 "summary": "Dashboard admin logout",
-                "operationId": "32deddd6f8dfa4c857ad9d3635e0ddd0",
+                "operationId": "95ada435252d033e27c9dcea26a108d6",
                 "responses": {
                     "200": {
                         "description": "Admin logged out successfully"
@@ -94,130 +94,21 @@
                 }
             }
         },
-        "/api/dashboard/events/{event_id}/toggle-role": {
+        "/api/dashboard/events/{event_id}/toggle-status": {
             "put": {
-                "summary": "Toggle event role",
-                "operationId": "631c442291ed2929b467f2325fe6c8b4",
+                "summary": "Toggle event status",
+                "operationId": "e01fc181c101ffc80c92867613f23ed1",
                 "responses": {
                     "200": {
-                        "description": "Event role toggled successfully"
+                        "description": "Event status toggled successfully"
                     }
                 }
             }
         },
-        "/api/dashboard/registrations": {
-            "get": {
-                "summary": "Get all registrations",
-                "operationId": "572deb69e3434dc5df15058058dca1ab",
-                "responses": {
-                    "200": {
-                        "description": "Registrations retrieved successfully"
-                    }
-                }
-            },
-            "post": {
-                "summary": "Create a new registration",
-                "operationId": "40d0979d39b0d0c1295d26353cc4a1bf",
-                "responses": {
-                    "201": {
-                        "description": "Registration created successfully"
-                    }
-                }
-            }
-        },
-        "/api/dashboard/registrations/{registration_id}": {
-            "get": {
-                "summary": "Get registration by ID",
-                "operationId": "8253512f4e566248cd6c5a9756aa7f8c",
-                "responses": {
-                    "200": {
-                        "description": "Registration retrieved successfully"
-                    }
-                }
-            },
-            "put": {
-                "summary": "Update registration",
-                "operationId": "232b60819960d437333b4d62ed2b3d91",
-                "responses": {
-                    "200": {
-                        "description": "Registration updated successfully"
-                    }
-                }
-            },
-            "delete": {
-                "summary": "Delete registration",
-                "operationId": "e7944de38d405c97a92b3aa8f1d623c7",
-                "responses": {
-                    "200": {
-                        "description": "Registration deleted successfully"
-                    }
-                }
-            }
-        },
-        "/api/dashboard/users": {
-            "get": {
-                "summary": "Get all users",
-                "operationId": "320906fed968f717081a051db17c074c",
-                "responses": {
-                    "200": {
-                        "description": "Users retrieved successfully"
-                    }
-                }
-            },
-            "post": {
-                "summary": "Create a new user",
-                "operationId": "91eaacada5a2f2e96ccbcea765c51876",
-                "responses": {
-                    "201": {
-                        "description": "User created successfully"
-                    }
-                }
-            }
-        },
-        "/api/dashboard/users/{user_id}": {
-            "get": {
-                "summary": "Get user by ID",
-                "operationId": "068698bd0bac24d2a9363da0fff70c62",
-                "responses": {
-                    "200": {
-                        "description": "User retrieved successfully"
-                    }
-                }
-            },
-            "put": {
-                "summary": "Update user",
-                "operationId": "e9b0aed35822d304d05ef494c8180aec",
-                "responses": {
-                    "200": {
-                        "description": "User updated successfully"
-                    }
-                }
-            },
-            "delete": {
-                "summary": "Delete user",
-                "operationId": "d8ec40a17db1e0718744bc3c77192a0e",
-                "responses": {
-                    "200": {
-                        "description": "User deleted successfully"
-                    }
-                }
-            }
-        },
-        "/api/dashboard/users/{user_id}/toggle-role": {
-            "put": {
-                "summary": "Toggle user role",
-                "operationId": "892b320879f614e24aa5787afef41a36",
-                "responses": {
-                    "200": {
-                        "description": "User role toggled successfully"
-                    }
-                }
-            }
-        },
-        "/api/web/register": {
+        "/api/web/auth/register": {
             "post": {
                 "summary": "Register a new user",
-                "operationId": "2ae278f27c8b39b842459702d188806b",
+                "operationId": "f7d1945ea3dbd6f2862a409b41aecb62",
                 "responses": {
                     "201": {
                         "description": "User registered successfully"
@@ -225,10 +116,10 @@
                 }
             }
         },
-        "/api/web/login": {
+        "/api/web/auth/login": {
             "post": {
                 "summary": "Login user",
-                "operationId": "0f5b74582c998142778403d823694a45",
+                "operationId": "44ad3d6916a8954cb9887ba5c1b02d07",
                 "responses": {
                     "200": {
                         "description": "User logged in successfully"
@@ -236,10 +127,10 @@
                 }
             }
         },
-        "/api/web/user": {
+        "/api/web/auth": {
             "get": {
                 "summary": "Get logged in user details",
-                "operationId": "41ced7cb3c19f470cd90edbd8cfa4ded",
+                "operationId": "a582eb4445ff75f03e5beacbf28b80f6",
                 "responses": {
                     "200": {
                         "description": "User details retrieved successfully"
@@ -247,10 +138,10 @@
                 }
             }
         },
-        "/api/web/logout": {
+        "/api/web/auth/logout": {
             "post": {
                 "summary": "Logout user",
-                "operationId": "426b04394f0e3f71e552a8f0fa192a83",
+                "operationId": "72c10e9ec4df7f6b39c383767e8b9094",
                 "responses": {
                     "200": {
                         "description": "User logged out successfully"
